kubernetes/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: smart-task
spec:
  selector:
    app: auth-service
  ports:
    - port: 5001
      targetPort: 5001
