kubernetes/task-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: smart-task
spec:
  selector:
    app: task-service
  ports:
    - port: 5002
      targetPort: 5002
